finished home and team page

--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,5 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: 'Carlos Barros'
+  github_nickname: 'cfbarros'
+- name: 'John Haus'
+  github_nickname: 'johnhaus'
+
